# Portfolio

./: README.md
GCP/: README.md
New Automation/: README.md  pyproject.toml  sample_dot_env  service_account.json
New Automation/docker/: Dockerfile  control_docker.sh  docker-compose.yml
New Automation/pharma_news/: cfg.py  constants.py  db_helpers.py  extract.py  helpers.py  schemas.py  transform.py
New Automation/pharma_news/dags/: dags_helper.py  process_news_dag_factory.py  process_news_dags.py  read_conf_from_gsheets_api_and_update_redis.py
ejercicios-libros/machine-learning-brett-lantz/: .RData  .Rhistory  Chapter 10 - Evaluating model performance.ipynb  Chapter 11 - Improving Model Performance.ipynb  Chapter 12 - Specialized Machine Learning Topics.ipynb  Chapter 7 - Black Box Methods - Neural Networks and SVM.ipynb  Chapter 9 - Finding Groups of Data - Clustering with k-means.ipynb  Untitled2.r  breast_cancer_classification.R  sms_results  sms_results.csv  sms_spam_classification.R  usedcars.R
frutic/: 2-exploracion-outliers.html  4-exploracion-plagas.html
kaggle/digit-recognizer/: .Rhistory  digit-recognizer.ipynb  submission.csv
kaggle/titanic/: submit.csv  titanic.ipynb
properati/: .Rhistory  plot1.html  plot2.html  properati.R  text-mining.ipynb  words.txt
r/: iris-dataset.ipynb  scrap_rock_lyrics.R
spark/: spark-foundations-1-getting-started.ipynb  spark-fundamentals-1-dataframes.ipynb  spark-fundamentals-1-scala-libs.ipynb  tutorial-spark-in-R0.ipynb  tutorial-spark-in-python1.ipynb  tutorial-spark-in-scala.ipynb
(+109 files in other folders)
